--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js",
-    "build": "node build server"
+    "server": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
